# mcp_test

./: .env.example  README.md  pyproject.toml
src/mcp_test/: crew.py  main.py
src/mcp_test/config/: agents.yaml  tasks.yaml
