[project]
name = "mcp_test"
version = "0.1.0"
description = "mcp-test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[mcp]>=0.47.1",
    "crewai[tools]>=0.130.0,<1.0.0",
]

[project.scripts]
mcp_test = "mcp_test.main:run"
run_crew = "mcp_test.main:run"
train = "mcp_test.main:train"
replay = "mcp_test.main:replay"
test = "mcp_test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
